# SmartCareDispatcher

./: .gitignore  CMakeLists.txt  README.md
sources/: AlarmClass.cpp  AlarmClass.hpp  CMakeLists.txt  alarm_processing.cpp  alarm_processing.hpp  alarm_subscription.cpp  alarm_subscription.hpp  dispatcher.class.cpp  dispatcher.class.h  dispatcher.cpp  dispatcher.hpp  globals.cpp  globals.hpp  smartspace_utils.cpp  smartspace_utils.hpp  volunteer_algorythm.cpp  volunteer_algorythm.hpp
sources/ontology/: CMakeLists.txt  smartcare.h
test/: CMakeLists.txt  main.cpp  main.cpp~
